# bifrost-server

./: .env.example  Cargo.toml  README.md  dockerfile
.github/workflows/: docker-publish.yml
src/: api_response.rs  app_state.rs  appconfig.rs  claims.rs  db.rs  main.rs  response.rs  status.rs
src/handler/: hello.rs  login.rs  mod.rs  status.rs
src/middleware/: auth.rs
